--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interlink-auto-bot",
+  "name": "Interlink-Multi-Bot",
   "version": "1.0.0",
   "description": "Automated bot for claiming Interlink Labs airdrop tokens",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cryptodai3/Interlink-Auto-Bot.git"
+    "url": "git+https://github.com/cryptodai3/Interlink-Multi-Bot.git"
   },
   "keywords": [
     "interlink",
@@ -22,9 +22,9 @@
   "author": "cryptodai3",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cryptodai3/Interlink-Auto-Bot/issues"
+    "url": "https://github.com/cryptodai3/Interlink-Multi-Bot/issues"
   },
-  "homepage": "https://github.com/cryptodai3/Interlink-Auto-Bot#readme",
+  "homepage": "https://github.com/cryptodai3/Interlink-Multi-Bot#readme",
   "dependencies": {
     "axios": "^1.6.2",
     "https-proxy-agent": "^7.0.2",
